--- a/users.ini
+++ b/users.ini
@@ -1,16 +1,17 @@
-[USERS]
-SYSTEM=
-ROOT=
-USEREXAMPLE=5f4dcc3b5aa765d61d8327deb882cf99
+[LIST]
+LIST=SYSTEM|ROOT|USEREXAMPLE
 
 [SYSTEM]
 USERNAME=SYSTEM
+PASSWORD=
 ROLE=0
 
 [ROOT]
 USERNAME=root
+PASSWORD=
 ROLE=1
 
 [USEREXAMPLE]
 USERNAME=UserExample
+PASSWORD=5f4dcc3b5aa765d61d8327deb882cf99
 ROLE=3
