--- a/system.ini
+++ b/system.ini
@@ -1,8 +1,8 @@
 [SYSTEM]
 OS=DOGOS_DEBUG|DEBUG|0.0.1
-PATH=1:/dogos
-TEMP=1:/dogos/temp
-TMP=1:/dogos/temp
-DIR=1:/dogos
+PATH=0:/dogos
+TEMP=0:/dogos/temp
+TMP=0:/dogos/temp
+DIR=0:/dogos
 INSETUP=0
-ROLES=SYSTEM-0:ROOT-1:ADMIN-2:USER-3:GUEST-4
+ROLES=SYSTEM-0|ADMIN-1|USER-2|GUEST-3
